--- a/index.html
+++ b/index.html
@@ -5,22 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>complete responsive hospital website design </title>
-
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-
     <!-- custom css file link  -->
     <link rel="stylesheet" href="css/style.css">
-
 </head>
 <body>
-    
 <!-- header section starts  -->
-
 <header class="header">
-
     <a href="#" class="logo"> <i class="fas fa-heartbeat"></i> medcare. </a>
-
     <nav class="navbar">
         <a href="#home">home</a>
         <a href="#services">services</a>
@@ -30,152 +23,102 @@
         <a href="#review">review</a>
         <a href="#blogs">blogs</a>
     </nav>
-
     <div id="menu-btn" class="fas fa-bars"></div>
-
 </header>
-
 <!-- header section ends -->
-
 <!-- home section starts  -->
-
 <section class="home" id="home">
-
     <div class="image">
         <img src="image/home-img.svg" alt="">
     </div>
-
     <div class="content">
         <h3>stay safe, stay healthy</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sed autem vero? Magnam, est laboriosam!</p>
         <a href="#" class="btn"> contact us <span class="fas fa-chevron-right"></span> </a>
     </div>
-
 </section>
-
-<!-- home section ends -->
-
-<!-- icons section starts  -->
-
+<!-- home section ends --> <!-- icons section starts  -->
 <section class="icons-container">
-
     <div class="icons">
         <i class="fas fa-user-md"></i>
         <h3>140+</h3>
         <p>doctors at work</p>
     </div>
-
     <div class="icons">
         <i class="fas fa-users"></i>
         <h3>1040+</h3>
         <p>satisfied patients</p>
     </div>
-
     <div class="icons">
         <i class="fas fa-procedures"></i>
         <h3>500+</h3>
         <p>bed facility</p>
     </div>
-
     <div class="icons">
         <i class="fas fa-hospital"></i>
         <h3>80+</h3>
         <p>available hospitals</p>
     </div>
-
-</section>
-
-<!-- icons section ends -->
-
-<!-- services section starts  -->
-
+</section><!-- icons section ends --><!-- services section starts  -->
 <section class="services" id="services">
-
     <h1 class="heading"> our <span>services</span> </h1>
-
     <div class="box-container">
-
         <div class="box">
             <i class="fas fa-notes-medical"></i>
             <h3>free checkups</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad, omnis.</p>
             <a href="#" class="btn"> learn more <span class="fas fa-chevron-right"></span> </a>
         </div>
-
         <div class="box">
             <i class="fas fa-ambulance"></i>
             <h3>24/7 ambulance</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad, omnis.</p>
             <a href="#" class="btn"> learn more <span class="fas fa-chevron-right"></span> </a>
         </div>
-
         <div class="box">
             <i class="fas fa-user-md"></i>
             <h3>expert doctors</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad, omnis.</p>
             <a href="#" class="btn"> learn more <span class="fas fa-chevron-right"></span> </a>
         </div>
-
         <div class="box">
             <i class="fas fa-pills"></i>
             <h3>medicines</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad, omnis.</p>
             <a href="#" class="btn"> learn more <span class="fas fa-chevron-right"></span> </a>
         </div>
-
         <div class="box">
             <i class="fas fa-procedures"></i>
             <h3>bed facility</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad, omnis.</p>
             <a href="#" class="btn"> learn more <span class="fas fa-chevron-right"></span> </a>
         </div>
-
         <div class="box">
             <i class="fas fa-heartbeat"></i>
             <h3>total care</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad, omnis.</p>
             <a href="#" class="btn"> learn more <span class="fas fa-chevron-right"></span> </a>
         </div>
-
     </div>
-
 </section>
-
-<!-- services section ends -->
-
-<!-- about section starts  -->
-
+<!-- services section ends --> <!-- about section starts  -->
 <section class="about" id="about">
-
     <h1 class="heading"> <span>about</span> us </h1>
-
     <div class="row">
-
         <div class="image">
             <img src="image/about-img.svg" alt="">
         </div>
-
         <div class="content">
             <h3>we take care of your healthy life</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure ducimus, quod ex cupiditate ullam in assumenda maiores et culpa odit tempora ipsam qui, quisquam quis facere iste fuga, minus nesciunt.</p>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus vero ipsam laborum porro voluptates voluptatibus a nihil temporibus deserunt vel?</p>
             <a href="#" class="btn"> learn more <span class="fas fa-chevron-right"></span> </a>
         </div>
-
     </div>
-
-</section>
-
-<!-- about section ends -->
-
-<!-- doctors section starts  -->
-
+</section> <!-- about section ends --> <!-- doctors section starts  -->
 <section class="doctors" id="doctors">
-
     <h1 class="heading"> our <span>doctors</span> </h1>
-
     <div class="box-container">
-
         <div class="box">
             <img src="image/doc-1.jpg" alt="">
             <h3>john deo</h3>
@@ -187,7 +130,6 @@
                 <a href="#" class="fab fa-linkedin"></a>
             </div>
         </div>
-
         <div class="box">
             <img src="image/doc-2.jpg" alt="">
             <h3>john deo</h3>
@@ -199,7 +141,6 @@
                 <a href="#" class="fab fa-linkedin"></a>
             </div>
         </div>
-
         <div class="box">
             <img src="image/doc-3.jpg" alt="">
             <h3>john deo</h3>
@@ -211,7 +152,6 @@
                 <a href="#" class="fab fa-linkedin"></a>
             </div>
         </div>
-
         <div class="box">
             <img src="image/doc-4.jpg" alt="">
             <h3>john deo</h3>
@@ -223,7 +163,6 @@
                 <a href="#" class="fab fa-linkedin"></a>
             </div>
         </div>
-
         <div class="box">
             <img src="image/doc-5.jpg" alt="">
             <h3>john deo</h3>
@@ -247,25 +186,14 @@
                 <a href="#" class="fab fa-linkedin"></a>
             </div>
         </div>
-
     </div>
-
-</section>
-
-<!-- doctors section ends -->
-
-<!-- booking section starts   -->
-
+</section> <!-- doctors section ends --> <!-- booking section starts   -->
 <section class="book" id="book">
-
     <h1 class="heading"> <span>book</span> now </h1>    
-
     <div class="row">
-
         <div class="image">
             <img src="image/book-img.svg" alt="">
         </div>
-
         <form action="">
             <h3>book appointment</h3>
             <input type="text" placeholder="your name" class="box">
@@ -274,21 +202,11 @@
             <input type="date" class="box">
             <input type="submit" value="book now" class="btn">
         </form>
-
     </div>
-
-</section>
-
-<!-- booking section ends -->
-
-<!-- review section starts  -->
-
+</section> <!-- booking section ends --><!-- review section starts  -->
 <section class="review" id="review">
-    
     <h1 class="heading"> client's <span>review</span> </h1>
-
     <div class="box-container">
-
         <div class="box">
             <img src="image/pic-1.png" alt="">
             <h3>john deo</h3>
@@ -301,7 +219,6 @@
             </div>
             <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam sapiente nihil aperiam? Repellat sequi nisi aliquid perspiciatis libero nobis rem numquam nesciunt alias sapiente minus voluptatem, reiciendis consequuntur optio dolorem!</p>
         </div>
-
         <div class="box">
             <img src="image/pic-2.png" alt="">
             <h3>john deo</h3>
@@ -314,7 +231,6 @@
             </div>
             <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam sapiente nihil aperiam? Repellat sequi nisi aliquid perspiciatis libero nobis rem numquam nesciunt alias sapiente minus voluptatem, reiciendis consequuntur optio dolorem!</p>
         </div>
-
         <div class="box">
             <img src="image/pic-3.png" alt="">
             <h3>john deo</h3>
@@ -327,21 +243,11 @@
             </div>
             <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam sapiente nihil aperiam? Repellat sequi nisi aliquid perspiciatis libero nobis rem numquam nesciunt alias sapiente minus voluptatem, reiciendis consequuntur optio dolorem!</p>
         </div>
-
     </div>
-
-</section>
-
-<!-- review section ends -->
-
-<!-- blogs section starts  -->
-
+</section> <!-- review section ends -->  <!-- blogs section starts  -->
 <section class="blogs" id="blogs">
-
     <h1 class="heading"> our <span>blogs</span> </h1>
-
     <div class="box-container">
-
         <div class="box">
             <div class="image">
                 <img src="image/blog-1.jpg" alt="">
@@ -356,7 +262,6 @@
                 <a href="#" class="btn"> learn more <span class="fas fa-chevron-right"></span> </a>
             </div>
         </div>
-
         <div class="box">
             <div class="image">
                 <img src="image/blog-2.jpg" alt="">
@@ -371,7 +276,6 @@
                 <a href="#" class="btn"> learn more <span class="fas fa-chevron-right"></span> </a>
             </div>
         </div>
-
         <div class="box">
             <div class="image">
                 <img src="image/blog-3.jpg" alt="">
@@ -386,19 +290,12 @@
                 <a href="#" class="btn"> learn more <span class="fas fa-chevron-right"></span> </a>
             </div>
         </div>
-
     </div>
-
 </section>
-
 <!-- blogs section ends -->
-
 <!-- footer section starts  -->
-
 <section class="footer">
-
     <div class="box-container">
-
         <div class="box">
             <h3>quick links</h3>
             <a href="#"> <i class="fas fa-chevron-right"></i> home </a>
@@ -409,7 +306,6 @@
             <a href="#"> <i class="fas fa-chevron-right"></i> review </a>
             <a href="#"> <i class="fas fa-chevron-right"></i> blogs </a>
         </div>
-
         <div class="box">
             <h3>our services</h3>
             <a href="#"> <i class="fas fa-chevron-right"></i> dental care </a>
@@ -418,7 +314,6 @@
             <a href="#"> <i class="fas fa-chevron-right"></i> diagnosis </a>
             <a href="#"> <i class="fas fa-chevron-right"></i> ambulance service </a>
         </div>
-
         <div class="box">
             <h3>contact info</h3>
             <a href="#"> <i class="fas fa-phone"></i> +123-456-7890 </a>
@@ -427,7 +322,6 @@
             <a href="#"> <i class="fas fa-envelope"></i> anasbhai@gmail.com </a>
             <a href="#"> <i class="fas fa-map-marker-alt"></i> mumbai, india - 400104 </a>
         </div>
-
         <div class="box">
             <h3>follow us</h3>
             <a href="#"> <i class="fab fa-facebook-f"></i> facebook </a>
@@ -437,34 +331,9 @@
             <a href="#"> <i class="fab fa-linkedin"></i> linkedin </a>
             <a href="#"> <i class="fab fa-pinterest"></i> pinterest </a>
         </div>
-
     </div>
-
     <div class="credit"> created by <span>mr. web designer</span> | all rights reserved </div>
-
-</section>
-
-<!-- footer section ends -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- custom js file link  -->
-<script src="js/script.js"></script>
-
+</section><!-- footer section ends -->
+<!-- custom js file link  --><script src="js/script.js"></script>
 </body>
 </html>
